--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <body>
 
-<!-- Header -->
-<div class="header-frame"></div>
+ <!-- Header -->
+ <div class="header-frame"></div>
 
-<!-- banner -->
+ <!-- banner -->
 
 <div class="banner">
-  <img src="./img/banner_slider.png" alt="">
+  <img src="img/banner_slider.png" alt="">
 </div>
 
 <!-- banner end -->
@@ -45,8 +45,8 @@
 
   <ul>
     <li>
-      <img src="./img/all_products/class01.png" alt="">
-      <img src="./img/all_products/class01.hover.png" alt="">
+      <img src="img/all_products/class01.png" alt="">
+      <img src="img/all_products/class01.hover.png" alt="">
       <h2>蔬菜類</h2>
     </li>
 
@@ -212,26 +212,26 @@
 
 <ul>
   <li>
-    <img src="./img/misssion/01.png" alt="">
+    <img src="img/misssion/01.png" alt="">
     <h2>把關優質小農</h2>
     <p>我們精心挑選每一位小農，嚴格定期進行稽核，並提供產銷履歷或有機認證，以確保您品味到的每一份農產品都是高品質、安心的。</p>
   </li>
 
   <li>
-    <img src="./img/misssion/02.png" alt="">
+    <img src="img/misssion/02.png" alt="">
     <h2>合理實惠的價格</h2>
     <p>我們與小農直接合作，消除中盤商的環節，確保您以最合理實惠的價格購得新鮮、有機的農產品，讓美味與經濟並存。</p>
   </li>
 
   <li>
-    <img src="./img/misssion/03.png" alt="">
+    <img src="img/misssion/03.png" alt="">
     <h2>幫助小農宣傳及銷售</h2>
     <p>我們不僅提供市場曝光，更協助小農宣傳，讓他們有機會在良作平台上建立自己的品牌形象，促進小農事業的可持續發展。</p>
   </li>
 
 </ul>
-<a href="/about/about.html">
-  <img class="btn" src="./img/misssion/mission_viewmore.png" alt="">
+<a href="about.html">
+  <img class="btn" src="img/misssion/mission_viewmore.png" alt="">
 </a>
 
 </div>
@@ -255,7 +255,7 @@
   <script src="js/index.js"></script>
 
   
-
+  <script>window.$ = window.jQuery = require('jquery');</script>
 
 
 </body>
